# YOCTO

YOCTO/Recipes-Examples/CMake/first/: first_1.0.bb
YOCTO/Recipes-Examples/Plugins/: pluginadd_1.0.bb
YOCTO/Recipes-Examples/Reference_Recipe_bb_files/AutoGen_Testing/: config.status  configure~  include  libtool
YOCTO/Recipes-Examples/Reference_Recipe_bb_files/gst-test/: gstexamplefilter.h
YOCTO/Reference_Recipe_Examples/: autotools.bb  bb.txt  cmakeplugin_1.0.bb  compile.txt  plugin_1.0.bb  plugin_1.0_cmake.bb  plugin_1.0_new.bb  plugin_1.0_tested.bb  plugin_1.0_updated.bb  test_1.0.bb  tet.txt
YOCTO/Reference_Recipe_Examples/AutoGen_Testing/: Makefile  config.h  configure.ac
YOCTO/Reference_Recipe_Examples/AutoGen_Testing/autom4te.cache/: traces.0t
YOCTO/Reference_Recipe_Examples/AutoGen_Testing/src/: Makefile.am  libmyplugin.la  libmyplugin_la-gstmyplugin.lo
YOCTO/Reference_Recipe_Examples/AutoGen_Testing/src/.deps/: libmyplugin_la-gstmyplugin.Plo  myplugin-gstmyplugin.Po
YOCTO/Reference_Recipe_Examples/AutoGen_Testing/src/.libs/: libmyplugin.la
YOCTO/Reference_Recipe_Examples/Cropping_Plugin/: CMakeLists.txt
YOCTO/Reference_Recipe_Examples/gst-test/: Makefile.am  configure.ac
YOCTO/Reference_Recipe_Examples/gst/gst-plugin/: Makefile
YOCTO/Reference_Recipe_Examples/ipcalc/: meson.build
YOCTO/Reference_Recipe_Examples/kms-gstreamer-plugin-sample/: CMakeCache.txt
YOCTO/Reference_Recipe_Examples/meta-tutorial/conf/: layer.conf
YOCTO/Reference_Recipe_Examples/plugin/: plugin_1.0.bb
YOCTO/Reference_Recipe_Examples/plugin/files/: CMakeLists.txt
YOCTO/Reference_Recipe_Examples/testing_own/gst-plugin/src/: Makefile.am
YOCTO/YOCTO_PDFS/yocto cheat sheet/: Bitbake-Cheatsheet.md
(+29 files in other folders)
